[gd_scene load_steps=10 format=3 uid="uid://61gu0hssk52h"]

[ext_resource type="Script" path="res://UI/PanCamera.gd" id="1_bwty5"]
[ext_resource type="PackedScene" path="res://PuzzleCanvas/puzzle_canvas.tscn" id="2_hetub"]
[ext_resource type="Texture2D" uid="uid://dxt53gumvtia8" path="res://Assets/Pulau_Padar.jpg" id="3_f3am2"]
[ext_resource type="Script" path="res://UI/RandomizeEdgeButton.gd" id="4_ruoih"]
[ext_resource type="Script" path="res://UI/AddEdgeButton.gd" id="5_q1ol5"]
[ext_resource type="Script" path="res://UI/DeleteEdgeButton.gd" id="6_l2tq3"]
[ext_resource type="Script" path="res://UI/EdgeInspector.gd" id="7_ydjap"]

[sub_resource type="Theme" id="Theme_mnow6"]
resource_name = "ButtonTheme"
Button/colors/font_pressed_color = Color(0.470588, 0.788235, 0.996078, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_07nag"]
resource_name = "ToolSelected"

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("1_bwty5")

[node name="PuzzleCanvas" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("2_hetub")]
camera = NodePath("../Camera2D")

[node name="BackgroundImage" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(453, 300)
scale = Vector2(0.306625, 0.306625)
texture = ExtResource("3_f3am2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 9.0
offset_right = 146.0
offset_bottom = 110.0

[node name="RandomizeEdgeButton" type="Button" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("canvas")]
layout_mode = 2
text = "Randomize Edge"
script = ExtResource("4_ruoih")
canvas = NodePath("../../../PuzzleCanvas")

[node name="AddEdgeButton" type="Button" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("canvas")]
layout_mode = 2
text = "Add Edge"
script = ExtResource("5_q1ol5")
canvas = NodePath("../../../PuzzleCanvas")

[node name="DeleteEdgeButton" type="Button" parent="CanvasLayer/VBoxContainer" node_paths=PackedStringArray("canvas")]
layout_mode = 2
text = "Delete Edge"
script = ExtResource("6_l2tq3")
canvas = NodePath("../../../PuzzleCanvas")

[node name="SelectionToolButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_mnow6")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_07nag")
text = "Selection"

[node name="NoOpToolButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_mnow6")
toggle_mode = true
button_group = SubResource("ButtonGroup_07nag")
text = "Do Nothing"

[node name="EdgeInspector" type="VBoxContainer" parent="CanvasLayer" node_paths=PackedStringArray("canvas")]
offset_left = 11.0
offset_top = 237.0
offset_right = 143.0
offset_bottom = 352.0
script = ExtResource("7_ydjap")
canvas = NodePath("../../PuzzleCanvas")

[node name="SelectionLabel" type="Label" parent="CanvasLayer/EdgeInspector"]
layout_mode = 2
text = "No Selection"
horizontal_alignment = 1

[node name="SingleEdgeView" type="Panel" parent="CanvasLayer/EdgeInspector"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2

[node name="LinePreview" type="Line2D" parent="CanvasLayer/EdgeInspector/SingleEdgeView"]
position = Vector2(5, 7)
points = PackedVector2Array(18, 26, 54, 28, 50, 17, 63, 5, 78, 17, 73, 32, 109, 30)
width = 3.0

[node name="SmallEdgeButtons" type="HBoxContainer" parent="CanvasLayer/EdgeInspector"]
layout_mode = 2

[node name="LongerEdgeButton" type="Button" parent="CanvasLayer/EdgeInspector/SmallEdgeButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "+"

[node name="ShorterEdgeButton" type="Button" parent="CanvasLayer/EdgeInspector/SmallEdgeButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "-"

[node name="LeftShiftEdgeButton" type="Button" parent="CanvasLayer/EdgeInspector/SmallEdgeButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "<"

[node name="RightShiftEdgeButton" type="Button" parent="CanvasLayer/EdgeInspector/SmallEdgeButtons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = ">"
